<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imie"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/imie_auto_fill"
            android:hint="@string/imie_edit_hint"
            android:inputType="text"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_margin="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nazwisko"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/nazwisko_auto_fill"
            android:hint="@string/nazwisko_edit_hint"
            android:inputType="text"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liczba_ocen"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/gradesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="5"
            android:hint="@string/liczba_ocen_edit_hint"
            android:inputType="number"
            android:textColorHint="#546E7A"
            android:textSize="20sp"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/gradesButton"
        android:layout_width="312dp"
        android:layout_height="79dp"
        android:text="@string/oceny"
        android:textSize="16sp" />

</LinearLayout>
